[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "python-dateutil==2.9.0.post0",
    "streamlit>=1.49.1",
    "moviepy>=1.0.3",
    "Pillow>=10.4.0",
    "imageio>=2.35.1",
    "imageio-ffmpeg>=0.5.1",
    "numpy>=2.0.0",
    "altair>=5.2.0",
]
